Add unit tests for model, fix model bugs

--- a/RobotsControl/RobotsControl.csproj
+++ b/RobotsControl/RobotsControl.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+    <_Parameter1>RobotsControlTest</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
